<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="clear">CE</string>
    <string name="result">=</string>
    <string name="shuru">请按数字键盘输入数字</string>
    <string name="shuchu">计算器输出结果</string>
    <string name="dot">.</string>
    <string name="write">写入</string>
    <string name="read">读取</string>
    <string name="resultText">计算式</string>
    <string name="appendBox">追加模式</string>

</resources>